# latent-spaces-by-example

./: .gitignore  README.md  pyproject.toml
examples/: basic_surrogate_chart.py  image_optimisation.py
src/latent_spaces_by_example/: __init__.py  surrogate.py  types.py  utils.py
src/latent_spaces_by_example/charts/: __init__.py  angular.py  api.py  knothe_rosenblatt.py  simplex.py
src/latent_spaces_by_example/transport_maps/: __init__.py  api.py
tests/: test_charts_angular.py  test_charts_knothe_rosenblatt.py  test_charts_simplex.py  test_examples.py  test_import.py  test_surrogate.py  test_surrogate_roundtrip.py  test_transport_maps.py  test_utils.py
